1. 添加城市选择浮层 2. 添加按字母分级列表 3.添加搜索列表 4. 修改日期显示控件

--- a/src/common/component/city-selector/index.css
+++ b/src/common/component/city-selector/index.css
@@ -134,7 +134,10 @@
     margin: 0;
 }
 .city-suggest-li {
-    list-style: none;
-    padding: 5px 9px 5px 15px;
+    display: block;
+    height: 44px;
+    line-height: 44px;
+    padding-left: 25px;
     border-bottom: 1px solid #e3e6e9;
+    margin-left: 15px;
 }
